--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
 </head>
+<style type="text/css">
+  body {
+    overflow: auto !important;
+  }
+</style>
 <body>
   <div id="app">Loading......</div>
   <script>
