--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
         search: {
             placeholder: {
                 '/zh-cn/': '搜索',
-                '/': 'Type to search'
+                '/': '搜索'
             },
             depth: 4,
             noData: {
                 '/zh-cn/': '找不到结果',
-                '/': 'No Results'
+                '/': '找不到结果'
             },
         },
     };
   </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 <style type="text/css">
