--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
 <script>
   const gitalk = new Gitalk({
-    clientID: 'Github Application Client ID',
-    clientSecret: 'Github Application Client Secret',
-    repo: 'Github repo',
-    owner: 'Github repo owner',
-    admin: ['Github repo collaborators, only these guys can initialize github issues'],
+    clientID: 'Ov23lifPFmYeYAS9rDEJ',
+    clientSecret: '3ff896c7939f3addd80b72a2bd3dade50f733c08',
+    repo: 'dicomi.dpdns.org.gitalk',
+    owner: 'dicomi2488',
+    admin: ['dicomi2488],
     // facebook-like distraction free mode
     distractionFreeMode: false
   })
