--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     clientSecret: '3ff896c7939f3addd80b72a2bd3dade50f733c08',
     repo: 'dicomi.dpdns.org.gitalk',
     owner: 'dicomi2488',
-    admin: ['dicomi2488],
+    admin: ['dicomi2488'],
     // facebook-like distraction free mode
     distractionFreeMode: false
   })
