--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         },
     };
   </script>
-<script defer src="https://cdn.commento.io/js/commento.js"></script>
-<div id="commento"></div>
+<script src="dist/js/commento.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
