--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     window.$docsify = {
         loadSidebar: true,
         loadSidebar: 'summary.md',
+        themeColor: "#42b983",
         subMaxLevel: 4,
         search: 'auto',
         search: {
