--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+  <link
+  rel="stylesheet"
+  href="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/style.min.css"
+/>
 </head>
 <body>
   <div id="app">Loading......</div>
@@ -12,6 +16,7 @@
     window.$docsify = {
         loadSidebar: true,
         loadSidebar: 'summary.md',
+        themeColor: "#42b983"
         subMaxLevel: 4,
         Valine: {
               appId: 'PBF06SAD0rjggQ0hvJ2j361g-MdYXbMMI',
@@ -31,6 +36,7 @@
         },
     };
   </script>
+<script src="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/index.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
