--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
+        Valine: {
+              appId: 'PBF06SAD0rjggQ0hvJ2j361g-MdYXbMMI',
+              appKey: 'CBYHGGlt3lIXdqOkK7HRK9Na',
         search: 'auto',
         search: {
             placeholder: {
@@ -27,6 +30,8 @@
         },
     };
   </script>
+<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script src="//unpkg.com/docsify-valine/dist/docsify-valine.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
