--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
         },
     };
   </script>
+  <script src="https://giscus.app/client.js"
+        data-repo="dicomi2488/dicomi_giscus"
+        data-repo-id="R_kgDOPWuhUQ"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOPWuhUc4CtrLR"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
