--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
+        giscus:{
+            repo: "dicomi2488/dicomi_giscus",
+            repoId: "R_kgDOPWuhUQ",
+            category: "Announcements",
+            categoryId: "DIC_kwDOPWuhUc4CtrLR",
+            mapping: "title",
+            reactionsEnabled: "1",
+            strict: "0",
+            emitMetadata: "0",
+            inputPosition: "bottom",
+            theme: "light",
+            lang: "zh-CN",
+            loading: "lazy"
+        },
         search: 'auto',
         search: {
             placeholder: {
@@ -27,22 +41,6 @@
         },
     };
   </script>
-  <script src="https://giscus.app/client.js"
-        data-repo="dicomi2488/dicomi_giscus"
-        data-repo-id="R_kgDOPWuhUQ"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOPWuhUc4CtrLR"
-        data-mapping="title"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="light"
-        data-lang="zh-CN"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-</script>
 <link rel="stylesheet" href="https://unpkg.com/docsify-giscus@1.0.0/dist/giscus.css">
 <script src="https://unpkg.com/docsify-giscus@1.0.0/dist/docsify-giscus.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
