--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             inputPosition: "bottom",
             theme: "light",
             lang: "zh-CN",
-##            loading: "lazy"
+            loading: "lazy"
         },
         search: 'auto',
         search: {
