--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             emitMetadata: "0",
             inputPosition: "bottom",
             theme: "light",
-            lang: "zh-CN",
-            loading: "lazy"
+            lang: "zh-CN"
         },
         search: 'auto',
         search: {
