--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             emitMetadata: "0",
             inputPosition: "bottom",
             theme: "light",
-            lang: "zh-CN"
+            lang: "zh-CN",
+            loading: "lazy"
         },
         search: 'auto',
         search: {
