--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
+        busuanzi: true,
         giscus:{
             repo: "dicomi2488/dicomi_giscus",
             repoId: "R_kgDOPWuhUQ",
@@ -43,6 +44,7 @@
   </script>
 <link rel="stylesheet" href="https://unpkg.com/docsify-giscus@1.0.0/dist/giscus.css">
 <script src="https://unpkg.com/docsify-giscus@1.0.0/dist/docsify-giscus.min.js"></script>
+<script src="https://unpkg.com/docsify-busuanzi@1.0.1/dist/docsify-busuanzi.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
