--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
+        darklightTheme: {
+            siteFont : "PT Sans"
+            },
         busuanzi: true,
         giscus:{
             repo: "dicomi2488/dicomi_giscus",
