--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         darklightTheme: {
-            siteFont : "PT Sans"
+            siteFont : "Source Sans Pro"
             },
         busuanzi: true,
         giscus:{
