--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         darklightTheme: {
-            siteFont : "Source Sans Pro"
+            siteFont : "Source Sans Pro",
+            codeFontFamily : 'Roboto Mono'
             },
         busuanzi: true,
         giscus:{
