--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         subMaxLevel: 4,
         darklightTheme: {
             siteFont : "Source Sans Pro",
-            codeFontFamily : 'Roboto Mono'
+            codeFontFamily : 'courier'
             },
         busuanzi: true,
         giscus:{
