--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         darklightTheme: {
-            siteFont : "Source Sans Pro",
-            codeFontFamily : 'courier'
+            siteFont: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif',
+            codeFontFamily: 'monospace'
             },
         busuanzi: true,
         giscus:{
