--- a/index.html
+++ b/index.html
@@ -20,9 +20,41 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         darklightTheme: {
-            siteFont: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif',
-            codeFontFamily: 'monospace'
+            siteFont : "PT Sans",
+            defaultTheme : 'dark',
+            codeFontFamily: 'monospace',
+            bodyFontSize : '17px',
+            dark: {
+                accent: '#42b983',
+                toogleBackground : '#ffffff',
+                background: '#091a28',
+                textColor: '#b4b4b4',
+                codeTextColor : '#ffffff',
+                codeBackgroundColor : '#0e2233',
+                borderColor : '#0d2538',
+                blockQuoteColor : '#858585',
+                highlightColor : '#d22778',
+                sidebarSublink : '#b4b4b4',
+                codeTypeColor : '#ffffff',
+                coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 85%) 0%,hsl(181, 100%, 85%) 100%)',
+                toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
             },
+            light: {
+                accent: '#42b983',
+                toogleBackground : '#091a28',
+                background: '#ffffff',
+                textColor: '#34495e',
+                codeTextColor : '#525252',
+                codeBackgroundColor : '#f8f8f8',
+                borderColor : 'rgba(0, 0, 0, 0.07)',
+                blockQuoteColor : '#858585',
+                highlightColor : '#d22778',
+                sidebarSublink : '#b4b4b4',
+                codeTypeColor : '#091a28',
+                coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 85%) 0%,hsl(181, 100%, 85%) 100%)',
+                toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/moon.svg)'
+            }
+        },
         busuanzi: true,
         giscus:{
             repo: "dicomi2488/dicomi_giscus",
