--- a/index.html
+++ b/index.html
@@ -63,5 +63,13 @@
     overflow: auto !important;
   }
 </style>
+<style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
+    }
+    code, pre {
+      font-family: monospace !important;
+    }
+  </style>
 </body>
 </html>
