--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
     }
     code, pre {
-      font-family: monospace !important;
-    }
+    font-family: Consolas, Monaco, "Andale Mono", monospace !important;
+  }
   </style>
 </body>
 </html>
