--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         busuanzi: true,
+        darklightTheme: {
+            codeFontFamily: 'Consolas, Monaco, "Courier New", monospace',
         giscus:{
             repo: "dicomi2488/dicomi_giscus",
             repoId: "R_kgDOPWuhUQ",
