--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
         versions: [
-            { folder: 'v2', label: 'v2.0.0', default: true },
+            { folder: 'docs', label: 'v2.0.0', default: true },
             { folder: 'v1', label: 'v1.0.0', default: false }
         ],
         giscus:{
