--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  //<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-versioned-plugin@0.0.1/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-versioned-plugin@0.0.1/styles.css">
 </head>
 <body>
   <div id="app">Loading......</div>
@@ -14,10 +14,10 @@
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
-        //versions: [
-            //{ folder: '#', label: 'v2.0.0', default: true },
-            //{ folder: 'v1', label: 'v1.0.0', default: false }
-        //],
+        versions: [
+            { folder: '#', label: 'v2.0.0', default: true },
+            { folder: 'v1', label: 'v1.0.0', default: false }
+        ],
         giscus:{
             repo: "dicomi2488/dicomi_giscus",
             repoId: "R_kgDOPWuhUQ",
@@ -46,7 +46,7 @@
         },
     };
   </script>
-//<script src="https://cdn.jsdelivr.net/npm/docsify-versioned-plugin@0.0.1/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/docsify-versioned-plugin@0.0.1/index.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/docsify-giscus@1.0.0/dist/giscus.css">
 <script src="https://unpkg.com/docsify-giscus@1.0.0/dist/docsify-giscus.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
