--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <div id="app">Loading......</div>
   <script>
     window.$docsify = {
+        auto2top:false,
+        routerMode: 'history',
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
