--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <script>
     window.$docsify = {
         auto2top:false,
+        name:'dicomi的小站',
+        notFoundPage: true,
+        notFoundPage: '404.md',
+        nameLink: '/',
         loadSidebar: true,
         loadSidebar: 'summary.md',
         subMaxLevel: 4,
