--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="app">Loading......</div>
   <script>
     window.$docsify = {
+        logo: '/icon.svg',
         auto2top:false,
         name:'dicomi的小站',
         notFoundPage: true,
