--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
   <meta name="referrer" content="no-referrer">
+  <link rel="icon" href="/logo.ico" type="image/x-icon">
 </head>
 <body>
   <div id="app">Loading......</div>
