--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <div id="app">Loading......</div>
   <script>
     window.$docsify = {
+        charty: {
+          mode: "light",
+          debug: false,
+          theme: '#4169E1'
+        }
         logo: '/icon.svg',
         auto2top:false,
         name:'dicomi的小站',
@@ -54,5 +59,7 @@
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@markbattistella/docsify-charty@latest"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@markbattistella/docsify-charty@latest/dist/docsify-charty.min.css">
 </body>
 </html>
